# project_tasks

./: Dockerfile  README.md  app.db  docker-compose.yml  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 8b1138fcac49_init_schema.py
src/: api.py  database.py  models.py  schemas.py
src/routers/: todo.py
src/tests/: conftest.py  test_lists.py  test_tasks.py
