[project]
name = "project-tasks"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Vargas",email = "rootweiller83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
alembic = "^1.16.2"

